# noctaSEbot

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
bot/: __main__.py  settings.py
bot/handlers/: __init__.py
bot/handlers/cbs/: __init__.py  universal_close.py
bot/handlers/cbs/language_settings/: keyboards.py
bot/handlers/cmds/: __init__.py  start.py
bot/middlewares/: check_user_middleware.py  throttling_middleware.py
bot/storages/: func.py
bot/storages/redis/: user_model.py
bot/storages/sqlite/: __init__.py  base.py  user_model.py
bot/utils/: text.py
migrations/: env.py
