[project]
name = "noctasebot"
version = "0.1.0"
description = "subscription tracking bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.mypy]
python_version = "3.12"
mypy_path = "src_zoo_park"
plugins = ["sqlalchemy.ext.mypy.plugin"]
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
extra_checks = true
follow_imports = "skip"
follow_imports_for_stubs = false
ignore_missing_imports = false
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
pretty = true
show_absolute_path = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = ["no-redef"]
exclude = ["\\.?venv", "\\.idea", "\\.tests?"]


[tool.ruff]
src = ["src_zoo_park"]
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "__pycache__",
    "*.pyi",
    "venv",
    ".venv",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
